--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shourya Gupta Portfolio</title>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Shourya Gupta's Portfolio Website" />
+    <title>Shourya Gupta | Portfolio</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
-  <body>
+  <body class="bg-black text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
